--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
