--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-navigation-menu": "^1.2.6",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "^9.1.2",
     "@reduxjs/toolkit": "^2.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -25,6 +27,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "tailwind-merge": "^3.2.0",
+    "three": "^0.175.0",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
